# haystack-search-engine

./: .gitignore  AGENTS.md  BUILD.md  CMakeLists.txt  COMMERCIAL_ROADMAP.md  Haystack.pages  LCA Initiation Sheet_Vilas_Tadoori.pages  README.md  main.cpp
Requirements/: phase2_5_deterministic_pdf_ocr_ingestion.md
data/: docs.json
idx/: docs.jsonl  index_meta.json
learnings/: README.md  phase2_2_cli_lifecycle_debugging.md  phase2_persistence_debugging.md  startup_message_debugging.md
prompts/: phase2_1_prompt.md  phase2_2_prompt.md  phase2_3_prompt.md  phase2_4_prompt.md  phase2_prompt.md
scripts/: load_test.py
specs/: PHASE2_GUI_SPEC.md  phase2_2_cli_lifecycle.md  phase2_3_runtime_lifecycle.md  phase2_4_runtime_operational_guarantees.md  phase2_5_deterministic_pdf_ocr_ingestion.md  phase2_persistence.md  phase3_ranking_query_engine.md
src/: main.cpp
tdd/: phase3_ranking_query_engine_tdd.md
tests/: runtime_test_common.cpp  runtime_test_common.hpp  test_basic.cpp  test_bm25.cpp  test_cli_error_messages.cpp  test_cli_exit_codes.cpp  test_cli_lifecycle.cpp  test_cli_persistence.cpp  test_cli_validation.cpp  test_file_scanner.cpp  test_inverted_index.cpp  test_persistence.cpp  test_persistence_crash_safety.cpp  test_persistence_determinism.cpp  test_persistence_errors.cpp  test_phase2_5_pdf_ocr_ingestion.cpp  test_query_parser.cpp  test_ranking.cpp  test_runtime_cleanup.cpp  test_runtime_failure_ordering.cpp  test_runtime_health_endpoint.cpp  test_runtime_index_validation.cpp  test_runtime_output_discipline.cpp  test_runtime_port_binding.cpp  test_runtime_readiness.cpp  test_runtime_safety.cpp  test_runtime_shutdown.cpp  test_runtime_shutdown_idempotency.cpp  test_runtime_startup_message.cpp  test_search_service.cpp  test_snippet.cpp  (+2 more)
(+126 files in other folders)
